[package]
name = "snphost"
version = "0.1.0"
authors = ["The VirTEE Project Developers"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/virtee/snphost"
repository = "https://github.com/virtee/snphost"
description = "Administrative utility for AMD SEV-SNP"
readme = "README"
keywords = ["amd", "sev", "sev-snp", "snp"]
exclude = [ ".gitignore", ".github/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sev = "1.1.0"
structopt = "0.3.26"
anyhow = "1.0.69"
env_logger = "0.10.0"
